Fixed overflow issue for transactions page on small screen sizes

--- a/client/styles/Transactions.module.scss
+++ b/client/styles/Transactions.module.scss
@@ -98,6 +98,7 @@
     margin: 0 auto;
     background-color: colors.$bg-black;
     box-shadow: 0 0 10px rgba(black, 0.5);
+    overflow-x: auto;
 }
 
 .table {
